# Local-Vision

./: .gitignore  Local-Vision.sln  README.md  docker-compose.yml
Backend/: Backend.csproj  Dockerfile  Program.cs
Backend/Controllers/: ImageController.cs
Backend/Models/DTO/: CaptionResponse.cs  SearchResponse.cs  SearchResult.cs
Backend/Properties/: launchSettings.json
Gateway/: Dockerfile  Program.cs  appsettings.json
Gateway/Properties/: launchSettings.json
Loacl-Vision-AppHost/: AppHost.cs  Loacl-Vision-AppHost.csproj
Loacl-Vision-AppHost/Properties/: launchSettings.json
caption-vector-store/: .dockerignore  main.py
caption-vectore-store/: .gitignore  dockerfile  main.py  pyproject.toml  save_model.py
image-caption-service/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml  save_model.py
